--- a/bon-temps/Views/Ingredienten/Edit.cshtml
+++ b/bon-temps/Views/Ingredienten/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Wijzigen</h1>
 
 <h4>Ingredient</h4>
 <hr />
@@ -41,7 +41,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Terug</a>
 </div>
 
 @section Scripts {
