--- a/bon-temps/Views/Menus/Edit.cshtml
+++ b/bon-temps/Views/Menus/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Wijzigen</h1>
 
 <h4>Menu</h4>
 <hr />
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Terug</a>
 </div>
 
 @section Scripts {
