--- a/bon-temps/Views/Reserveringen/Create.cshtml
+++ b/bon-temps/Views/Reserveringen/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Aanmaken</h1>
 
 <h4>Reservering</h4>
 <hr />
@@ -29,14 +29,14 @@
                 <input type="hidden" asp-for="ApplicationUserId" value="0"/>
             }
         <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary"/>  
+                <input type="submit" value="Aanmaken" class="btn btn-primary"/>  
         </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Terug</a>
 </div>
 
 @section Scripts {
