--- a/bon-temps/Views/Reserveringen/Details.cshtml
+++ b/bon-temps/Views/Reserveringen/Details.cshtml
@@ -44,6 +44,6 @@
     </form>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Wijzigen</a> |
+    <a asp-action="Index">Terug</a>
 </div>
