--- a/bon-temps/Views/Shared/_IngredientPartial.cshtml
+++ b/bon-temps/Views/Shared/_IngredientPartial.cshtml
@@ -17,7 +17,7 @@
                 <span asp-validation-for="Eenheid" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Aanmaken" class="btn btn-primary" />
             </div>
         </form>
     </div>
